# renny2

./: inspiration.md
backend/: .env  .env.example  main.py  pyproject.toml  strategy_pipeline.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
scripts/: sb  sf
